# aegis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: develop.yml
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  providers.rs
src/providers/: anthropic.rs  openai.rs
