[package]
name = "aegis"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["Vu <cold-live-0f@icloud.com>"]
description = "A unified Rust client and library API providing a consistent interface for multiple AI language model providers, with extensible support for OpenAI, Anthropic, and more"
[lib]
name = "aegis"
path = "src/lib.rs"

[[bin]]
name = "aegis-cli"
path = "src/bin/cli.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
futures = "0.3"
dotenv = "0.15"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"